💄 Fix : Layout visibility issue (#5)

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,11 @@
 main {
   flex: 1;
   width: 100%;
-  height: 100%;
+  height: 80vh;
   display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
