--- a/src/page/ChatRooms/ChatRooms.css
+++ b/src/page/ChatRooms/ChatRooms.css
@@ -8,13 +8,15 @@
 
 /* 메인 화면 */
 .content-area {
-  flex: 1;
+  width: 100%;
+  height: 100%;
   background-color: #fff;
   padding: 20px 15px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 12px;
+  box-sizing: border-box;
 }
 
 .content-area p span {
