--- a/src/page/auth/Login.css
+++ b/src/page/auth/Login.css
@@ -1,5 +1,4 @@
 .login-container {
-  flex: 1;
   background-color: #fae100;
   display: flex;
   flex-direction: column;
@@ -7,7 +6,8 @@
   justify-content: flex-start;
   padding: 0px 75px;
   gap: 30px;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 /* 카톡 로고 */
